# ftready

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  _typos.toml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  ft_check.yml  publish.yml  release.yml
src/ftready/: __init__.py  __main__.py  checker.py  cli.py  constants.py  diff.py  models.py  parser.py  report.py  scraper.py
tests/: conftest.py  test_checker.py  test_cli.py  test_diff.py  test_models.py  test_parser.py  test_report.py  test_scraper.py  test_smoke.py
