[build-system]
    build-backend = "hatchling.build"
    requires      = ["hatchling"]

[project]
    authors = [{ name = "David Anthony Parham" }]
    classifiers = [
        "Development Status :: 4 - Beta",
        "Environment :: Console",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
        "Topic :: Software Development :: Quality Assurance",
        "Topic :: Software Development :: Testing",
        "Typing :: Typed",
    ]
    description = "Check if your Python project dependencies are ready for free-threaded Python (3.13t/3.14t)"
    keywords = ["compatibility", "dependencies", "free-threading", "gil", "nogil"]
    license = "MIT"
    name = "ftready"
    readme = "README.md"
    requires-python = ">=3.11"
    version = "0.1.0"

    [project.optional-dependencies]
        rich = ["rich>=13.0"]

    [project.urls]
        Homepage   = "https://github.com/dparham/ftready"
        Repository = "https://github.com/dparham/ftready"

    [project.scripts]
        ftready = "ftready.cli:main"

[tool.hatch.build.targets.wheel]
    packages = ["src/ftready"]

[tool.ruff]
    line-length    = 120
    target-version = "py311"

    [tool.ruff.lint]
        ignore = ["S310"]
        select = [
            "A",
            "ARG",
            "B",
            "C4",
            "DTZ",
            "E",
            "ERA",
            "F",
            "I",
            "ICN",
            "N",
            "PIE",
            "PT",
            "PTH",
            "RET",
            "RSE",
            "S",
            "SIM",
            "T20",
            "TCH",
            "TID",
            "UP",
            "W",
        ]

        [tool.ruff.lint.isort]
            known-first-party = ["ftready"]

[tool.pytest.ini_options]
    testpaths = ["tests"]
